# shopbot-ai

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  rag.py  requirements.txt
flask_app/: app.py
flask_app/templates/: index.html
home/hayamoto/Desktop/shopbot/: fais_shopbot_database.faiss.faiss  fais_shopbot_database.faiss.pkl
mcp/: shopbot_server.py
