[project]
name = "shopbot-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.14.2",
    "flask>=3.1.3",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.4",
    "mcp>=1.27.2",
    "mysql-connector-python>=9.7.0",
    "pymongo>=4.17.0",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
]
